--- a/src/components/TodoContainer/todoContainer.module.css
+++ b/src/components/TodoContainer/todoContainer.module.css
@@ -1,8 +1,10 @@
 .section {
     background-color: #18181c;
     color: #8a8dce;
-    width: 900px;
-    height: 700px;
+    width: 80%;
+    max-width: 900px;
+    max-height: 700px;
+    min-height: 400px;
     border-radius: 40px;
     display: flex;
     flex-direction: column;
