--- a/src/components/AppHeader/appHeader.module.css
+++ b/src/components/AppHeader/appHeader.module.css
@@ -1,11 +1,13 @@
 .header {
     display: flex;
     border-bottom: 1px solid #EAF7FF;
-    height: 80px;
+    height: 51px;
+    width: 90vw;
     max-width: 1400px;
-    width: 1400px;
-    padding: 30px 0 0 100px;
+    padding-top: 30px;
+    margin: 0 auto;
 }
+
 
 .navigation {
     display: flex;
@@ -14,7 +16,7 @@
 }
 
 .logo {
-    width: 100px;
+    width: 120px;
     height: 30px;
 }
 
@@ -25,12 +27,12 @@
     text-decoration: none;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 .listItem {
     text-decoration: none;
     width: 66px;
-    height: 51px;
 }
 
 .listItem:hover {
@@ -38,8 +40,37 @@
     transition: border-bottom 1s;
 }
 
+.activeTab {
+    text-decoration: none;
+    width: 66px;
+    border-bottom: 1px solid #44B1EF;
+}
+
 .link {
     font-weight: 900;
     text-decoration: none;
     color: #27507F
+}
+
+
+@media screen and (max-width: 550px) {
+    .header {
+        padding: 30px 0 81px 0;
+    }
+
+    .navigation {
+        width: 100%;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        gap: 40px
+    }
+
+    .link:first-of-type {
+        grid-column: 1/3
+    }
+
+    .navList {
+        gap: 5px;
+    }
 }
