--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  background-color: #fff;
+  background-color: #F8FAFF;
   font-family: 'Inter';
 }
 
