--- a/src/ui/addButton/addButton.module.css
+++ b/src/ui/addButton/addButton.module.css
@@ -1,7 +1,9 @@
 .btnAdd {
     border: none;
-    background-color: #fff;
+    background-color: #F8FAFF;
     cursor: pointer;
+    margin: 0;
+    padding: 0;
 }
 
 .addIcon {
