--- a/src/ui/hamburgerMenu/hamburgerMenu.module.css
+++ b/src/ui/hamburgerMenu/hamburgerMenu.module.css
@@ -1,7 +1,9 @@
 .hamburgerButton {
     border: none;
-    background-color: #fff;
+    background-color: #F8FAFF;
     cursor: pointer;
+    margin: 0 12px 0 8px;
+    padding: 0;
 }
 
 .vectorIcon:hover {
