--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   background-color: #F8FAFF;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
 }
 
 .main {
