--- a/src/components/TodoGroup/todoGroups.module.css
+++ b/src/components/TodoGroup/todoGroups.module.css
@@ -1,7 +1,11 @@
 .groupConstructor {
     width: 856px;
     display: flex;
+    min-height: 350px;
+    box-sizing: border-box;
+    cursor: grab;
 }
+
 
 .groupContainer {
     display: flex;
@@ -22,6 +26,7 @@
 }
 
 .groupTodo {
+    min-height: 350px;
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -42,4 +47,26 @@
     display: flex;
     flex-direction: column;
     gap: 10px
+}
+
+@media screen and (max-width: 1500px) {
+    .groupConstructor {
+        max-width: 640px
+    }
+
+    .groupContainer {
+        max-width: calc(300px + (734 - 300) * ((100vw - 320px) / (1500 - 320)));
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .groupConstructor {
+        max-width: 400px
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .groupConstructor {
+        max-width: 300px;
+    }
 }
