--- a/src/pages/pages.module.css
+++ b/src/pages/pages.module.css
@@ -1,7 +1,9 @@
 .main {
     padding: 20px 0 0 0;
     display: flex;
-    gap: 10px
+    gap: 10px;
+    box-sizing: border-box;
+    min-height: calc(100vh - 283px);
 }
 
 
@@ -12,9 +14,17 @@
     align-items: center;
 }
 
-
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 950px) {
     .main {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .main {
+        display: flex;
         flex-direction: column;
     }
 }
