--- a/src/pages/pages.module.css
+++ b/src/pages/pages.module.css
@@ -4,6 +4,7 @@
     gap: 10px;
     box-sizing: border-box;
     min-height: calc(100vh - 283px);
+    flex: 1 0 auto
 }
 
 
@@ -12,6 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: calc(100vh - 283px);
 }
 
 @media screen and (max-width: 950px) {
