--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   height: 100%;
   background-color: #F8FAFF;
-  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Inter';
 }
 
 .main {
