--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,20 +1,20 @@
 @font-face {
-    font-family: 'Inter-Regular';
+    font-family: 'Inter';
     font-weight: 400;
     font-display: swap;
-    src: url(./Inter-Regular.woff2) format('woff2');
+    src: url(./Inter-Regular.woff2) format('woff2') url(./Inter-Regular.woff) format('woff')
 }
 
 @font-face {
-    font-family: 'Inter-SemiBold';
+    font-family: 'Inter';
     font-weight: 900;
     font-display: swap;
-    src: url(./Inter-SemiBold.woff2) format('woff2');
+    src: url(./Inter-SemiBold.woff2) format('woff2') url(./Inter-SemiBold.woff) format('woff')
 }
 
 @font-face {
-    font-family: 'Inter-Medium';
+    font-family: 'Inter';
     font-weight: 700;
     font-display: swap;
-    src: url(./Inter-Medium.woff2) format('woff2')
+    src: url(./Inter-Medium.woff2) format('woff2') url(./Inter-Medium.woff) format('woff')
 }
